<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjetAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ajout">ajout</string>
    <string name="plotlabel">plotLabel</string>
    <string name="plottype">plotType</string>
    <string name="info">info</string>
    <string name="plot_image">plot image</string>
    <string name="plot_name">plot name</string>
    <string name="culture">Culture : </string>
    <string name="previous_culture_">Previous culture : </string>
    <string name="surface_">Surface : </string>
    <string name="cult">infoCult</string>
    <string name="prevcult">infoPrevCult</string>
    <string name="surface">Surface</string>
    <string name="contr_le">Contrôle</string>
    <string name="commande">Commande</string>
    <string name="convertisseur">Convertisseur</string>
    <string name="parcelles">Parcelles</string>
    <string name="ajouter_parcelle">Ajouter Parcelle</string>
    <string name="nom_">"Nom : "</string>
    <string name="culture_">Culture :</string>
    <string name="culture_pr_c_dente_">Culture précédente :</string>
    <string name="ajouter">Ajouter</string>
    <string name="densit_de_semis_">Densité de semis :</string>
    <string name="pgm_">"PGM : "</string>
    <string name="poids_de_semences_c_cessaire_">"Poids de semences cécessaire : "</string>
    <string name="_0">0</string>
    <string name="g">g</string>
    <string name="grains_m2">grains/m2</string>
    <string name="kg_ha">Kg/ha</string>
    <string name="poids_de_semences_n_cessaires">Poids de semences nécessaires</string>
    <string name="conditionnement">Conditionnement</string>
    <string name="nombre_commander">Nombre à commander</string>
    <string name="ha">ha</string>
    <string name="kg_sac">Kg/sac</string>
    <string name="sacs">sacs</string>
    <string name="image">image</string>
    <string name="denit_de_semis_">Denité de semis :</string>
    <string name="ecartement">Ecartement</string>
    <string name="nombre_de_rangs_m2">Nombre de rangs / m2</string>
    <string name="nombre_de_grains_m2">Nombre de grains / m2</string>
    <string name="_rangs_m2">" rangs/m2"</string>
    <string name="_grains_m2">" grains/m2"</string>
    <string name="cm">cm</string>
    <string name="adresse">Adresse :</string>
    <string name="search_map">search map</string>

</resources>