<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_plotName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plot_name" 
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>

    <ImageView
        android:id="@+id/iv_plotImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/plot_image" 
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
         >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
             >

            <TextView
                android:id="@+id/tv_plotCulInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/culture"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_plotCulPrevInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/previous_culture_"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_plotSurfInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/surface_"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_plotCul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cult" 
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_plotCulPrev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/prevcult"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/tv_plotSurf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/surface"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>