<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tv_plot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plotlabel"
        android:textSize="16sp" 
        android:textStyle="bold">
    </TextView>
    
    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_plot"
        android:text="@string/plottype"
        android:textSize="12sp" 
        android:layout_marginBottom="10dp">
    </TextView>
    
    <ImageButton 
        android:id="@+id/b_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/ic_action_next_item"
        android:contentDescription="@string/info"/>

</RelativeLayout>